# cuda_emicp_softassign

./: CMakeLists.txt  LICENSE  Makefile  Makefile.demo  Makefile.distribution  Makefile.win  README.md  README.txt
data/: P10064.txt  P1007.txt  P101.txt  P3097.txt  P5032.txt  P504.txt  Qnew10064.txt  Qnew1007.txt  Qnew101.txt  Qnew3097.txt  Qnew5032.txt  Qnew504.txt  Rt10064.txt  Rt1007.txt  Rt101.txt  Rt3097.txt  Rt5032.txt  Rt504.txt  bun045_40097.txt  bun2.ply  bun3.ply  bun5.ply  bun_zipper_points_1459.txt  generatePoints.sci
src/: 3dregistration.h  Makefile  add_rigid_transform.cpp  algebra.cpp  algebra.h  cloud2data.cpp  emicp.cu  emicp_cpu.cpp  engine.cpp  engine.h  findRTfromS.cpp  icp.cpp  main.cpp  merge.cpp  orbcam.cpp  orbcam.h  pcd2ply.cpp  rply.c  softassign.cu
win/CLAPACK/lib/: blas.lib  blasd.lib  libf2c.lib  libf2cd.lib
